--- a/ProxysqlAdminUi.Web/Components/_Imports.razor
+++ b/ProxysqlAdminUi.Web/Components/_Imports.razor
@@ -9,3 +9,8 @@
 @using Microsoft.JSInterop
 @using ProxysqlAdminUi.Web
 @using ProxysqlAdminUi.Web.Components
+@using Radzen
+@using Radzen.Blazor
+@using Microsoft.AspNetCore.WebUtilities;
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
