--- a/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
+++ b/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase 
+@inherits LayoutComponentBase 
 
 @inject NavigationManager NavigationManager
 
@@ -18,13 +18,6 @@
         @Body
     </RadzenBody>
 </RadzenLayout>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
-
 
 @code {
     bool sidebar1Expanded = true;
