Added a page to view and edit global variables

--- a/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
+++ b/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,4 @@
-@inherits LayoutComponentBase 
+﻿@inherits LayoutComponentBase 
 
 @inject NavigationManager NavigationManager
 
@@ -12,6 +12,7 @@
             <RadzenMenuItem Text="Servers" Icon="dns" Path="/mysql/servers" />
             <RadzenMenuItem Text="Rules" Icon="quiz" Path="/mysql/rules" />
             <RadzenMenuItem Text="Query Digest" Icon="query_stats" Path="/mysql/queries/digest" />
+            <RadzenMenuItem Text="Global Variables" Icon="settings" Path="/proxysql/global-variables" />
         </RadzenMenu>
     </RadzenHeader>
     <RadzenBody>
