Adjusted Authorize attribute formatting

--- a/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/AddQueryRuleDialog.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/MySql/Rules/AddQueryRuleDialog.razor
@@ -3,6 +3,8 @@
 @using ProxysqlAdminUi.Web.Models
 @using ProxysqlAdminUi.Web.Repositories
 
+@attribute [Authorize]
+
 @inject ProxySqlRepository ProxySqlRepository
 @inject DialogService DialogService
 @inject NotificationService NotificationService
