--- a/ProxysqlAdminUi.Web/Components/Pages/ProxySQL/GlobalVariables.razor
+++ b/ProxysqlAdminUi.Web/Components/Pages/ProxySQL/GlobalVariables.razor
@@ -1,7 +1,9 @@
-﻿@page "/proxysql/global-variables"
+@page "/proxysql/global-variables"
 
 @using ProxysqlAdminUi.Web.Models
 @using ProxysqlAdminUi.Web.Repositories
+
+@attribute [Authorize]
 
 @inject ProxySqlRepository ProxySqlRepository
 @inject NotificationService NotificationService
