Added Actions page

--- a/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
+++ b/ProxysqlAdminUi.Web/Components/Layout/MainLayout.razor
@@ -13,6 +13,7 @@
             <RadzenMenuItem Text="Rules" Icon="quiz" Path="/mysql/rules" />
             <RadzenMenuItem Text="Query Digest" Icon="query_stats" Path="/mysql/queries/digest" />
             <RadzenMenuItem Text="Global Variables" Icon="settings" Path="/proxysql/global-variables" />
+            <RadzenMenuItem Text="Actions" Icon="build" Path="/proxysql/actions" />
         </RadzenMenu>
     </RadzenHeader>
     <RadzenBody>
